@startuml

hide circle
hide members
skinparam classAttributeIconSize 0

class SpendingList
class Item
Enum "<<Enumeration>>\nCategory"
class "{abstract}\nCommand"

SpendingList *-- "0 .. *" Item
Item -> "<<Enumeration>>\nCategory"
"{abstract}\nCommand" -right-> SpendingList : execute
SpendingList ..> Storage
Storage -> SpendingList

@enduml